--- a/components/go-dwpzcsoj/overlays/development/deployment-patch.yaml
+++ b/components/go-dwpzcsoj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-dwpzcsoj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-dwpzcsoj:daea5a4449abf65f94f5f5015619d2f2c2ea7701@sha256:8ebd3c21a13b88d1b15316bf5c034393506ea8a510537cad16480b9adf7d4bc6
+          name: container-image
